# DeepSimulator

./: .gitignore  README.md  case_study.sh  deep_simulator.sh  environment.yml  install.sh  main.sh  pore_model.sh  readlinkf.sh  train_pore_model.sh
cal_profile_blast/: Stat_List  fufufufout  main.sh  mapping.txt  readme.md  readme.txt  result.txt  test.fasta  test.fastq  wslist1  wslist2  wslist3
example/: 001c577a-a502-43ef-926a-b883f94d157b.raw_signal  001c577a-a502-43ef-926a-b883f94d157b.true_fasta  artificial_human_chr22.fasta  multi.fasta  phage_lambda.fasta
guppy_3.1.5/: download_and_install.sh
mapping_check/: acc_check.py  mapping.paf  test.fastq
pore_model/data/cwDTW_nano_src/: CMakeLists.txt  README  cwDTW_nano  install.sh
pore_model/data/cwDTW_nano_src/example/: 002a08b9-0248-4929-9759-2d5c0942076d.rawsig  0a0dc008-5d60-4f7f-aa24-c78da021f7bf.fasta  0a0dc008-5d60-4f7f-aa24-c78da021f7bf.rawsig
pore_model/data/cwDTW_nano_src/lib/: CMakeLists.txt
pore_model/data/cwDTW_nano_src/lib/wavelib/: CMakeLists.txt
pore_model/data/cwDTW_nano_src/lib/wavelib/header/: wavelib.h
pore_model/data/cwDTW_nano_src/lib/wavelib/src/: CMakeLists.txt  cwt.c  wavelib.c  wavelib.h
pore_model/data/cwDTW_nano_src/util/: README  Signal_To_Event  Signal_To_Event_kmer
pore_model/data/cwDTW_nano_src/util/KMer_poremodel/: 5mer_poremodel_index  6mer_poremodel_index
sampling_from_genome/: sampling.py  test.fasta
signal_to_fast5/: fast5_modify_signal.py  signal.txt
util/: fast5_extract_signal.py  fast5_modify_signal.py  genome_preprocess.py  genome_sampling.py  minimap2  (+4 more)
(+28 files in other folders)
